# android-init-for-linux

./: CMakeLists.txt  Makefile
init/: devices.c  init.c  init.rc  path.h  propd.c  propd.h  util.c
init/rootdir/: init.rc
